WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273565
[UnifiedPDF] Snapshots don't get the correct scroll offset or document scale
https://bugs.webkit.org/show_bug.cgi?id=273565
Summary
[UnifiedPDF] Snapshots don't get the correct scroll offset or document scale
Sammy Gill
Reported
2024-05-01 12:56:09 PDT
PDF tab previews look wrong because they don’t correctly reflect the document’s scroll offset, or its scale.
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2024-05-01 12:56:28 PDT
rdar://126945237
Sammy Gill
Comment 2
2024-05-01 13:33:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28000
EWS
Comment 3
2024-05-01 20:40:42 PDT
Committed
278244@main
(8cf954d346bc): <
https://commits.webkit.org/278244@main
> Reviewed commits have been landed. Closing PR #28000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug